--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <SeekBar
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
         android:id="@+id/seekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <SeekBar
+        android:layout_marginTop="30dp"
+        android:id="@+id/seekbar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
